<resources>
    <string name="aliyun_action_settings">Settings</string>
    <string name="aliyun_res_copy">资源拷贝中</string>
    <string name="aliyun_compose">合成中</string>
    <string name="aliyun_permission_camera_mic">请求相机和麦克风权限</string>
    <string name="aliyun_filter_null">原片</string>
    <string name="aliyun_video_save_tip">当前拍摄的视频已保存相册</string>
    <string name="aliyun_min_record_duration">最小时长</string>
    <string name="aliyun_max_record_duration">最大时长</string>
    <string name="aliyun_bit_rate">码率(kbps)</string>
    <string name="aliyun_record_frame_rate">帧率</string>
    <string name="aliyun_svideo_record_quality">视频质量</string>
    <string name="aliyun_record_gop">关键帧间隔</string>
    <string name="aliyun_bitrate">码率</string>
    <string name="aliyun_record_resolution">分辨率</string>
    <string name="aliyun_record_ratio">视频比例</string>
    <string name="aliyun_min_record_duration_hint">最小时长大于0，默认值2S</string>
    <string name="aliyun_max_record_duration_hint">不超过300S，默认值15S</string>
    <string name="aliyun_bit_rate_hint">建议600-2000，默认1000</string>
    <string name="aliyun_record_frame_rate_hint">建议20-30，默认30</string>
    <string name="aliyun_record_gop_hint">建议1-300，默认250 </string>
    <string name="aliyun_bitrate_hint">默认为0，根据视频质量参数计算</string>
    <string name="aliyun_start_record">启动录制界面</string>
    <string name="alivc_record_setting">录制设置</string>
    <string name="aliyun_record_resolution_360p">360p</string>
    <string name="aliyun_record_resolution_480p">480p</string>
    <string name="aliyun_record_resolution_540p">540p</string>
    <string name="aliyun_record_resolution_720p">720p</string>
    <string name="aliyun_record_ratio_1_1">1:1</string>
    <string name="aliyun_reocrd_ratio_9_16">9:16</string>
    <string name="aliyun_record_ratio_3_4">3:4</string>
    <string name="aliyun_svideo_record_quality_low">较差</string>
    <string name="aliyun_svideo_record_quality_meidan">一般</string>
    <string name="aliyun_record_video_quality_high">良好</string>
    <string name="aliyun_svideo_record_quality_super">优质</string>
    <string name="aliyun_camera_permission_tip">请开启摄像头权限</string>
    <string name="aliyun_no_import_moudle">当前不包含导入模块</string>


    <string name="aliyun_rate_very_slow">极慢</string>
    <string name="aliyun_rate_slow">慢</string>
    <string name="aliyun_rate_standard">标准</string>
    <string name="aliyun_rate_fast">快</string>
    <string name="aliyun_rate_very_fast">极快</string>
    <string name="aliyun_delete">回删</string>
    <string name="aliyun_record_video_codec">视频编码方式</string>
    <string name="aliyun_record_hardware_encoder">硬编</string>
    <string name="aliyun_record_openh264_encoder">OpenH264软编</string>
    <string name="aliyun_record_ffmpeg_encoder">FFmpeg软编</string>
    <string name="aliyun_record_duration_error">最小时长不能大于最大时长, 请重新设置!!!</string>
    <string name="aliyun_beauty_face">美颜</string>
    <string name="aliyun_face_sticker">人脸贴纸</string>
    <string name="alivc_not_allow_change_mv">录制过程中, 不能更改MV效果</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alivc_filter_none">无效果</string>
    
    <string name="alivc_record_click">单击拍</string>
    <string name="alivc_record_long_press">长按拍</string>
    <string name="alivc_record_press">按住拍</string>
    <string name="alivc_record_clear">清空</string>

    <string name="hez_ztt_fu">张嘴试试</string>
    <string name="ctrl_rain">控雨</string>
    <string name="ctrl_snow">控雪</string>
    <string name="ctrl_flower">控花</string>
    <string name="fu_lm_koreaheart">单手手指比心</string>
    <string name="fu_zh_baoquan">双手抱拳</string>
    <string name="fu_zh_hezxiong">双手合十</string>
    <string name="fu_ztt_live520">双手比心</string>
    <string name="ssd_thread_thumb">竖个拇指</string>
    <string name="ssd_thread_six">比个六</string>
    <string name="ssd_thread_cute">双拳靠近脸颊卖萌</string>

    <string name="armesh_ex">AR面具高精度版</string>
    <string name="future_warrior">张嘴试试</string>
    <string name="jet_mask">鼓腮帮子</string>
    <string name="sdx2">皱眉试试</string>
    <string name="luhantongkuan_ztt_fu">眨一眨眼</string>
    <string name="qingqing_ztt_fu">嘟嘴试试</string>
    <string name="xiaobianzi_zh_fu">微笑触发</string>
    <string name="xiaoxueshen_ztt_fu">吹气触发</string>

    <string name="alivc_onekey_open">一键开启</string>
    <string name="alivc_permission_title">请开启以下权限</string>
    <string name="alivc_phone_state_calling">通话中, 录制时静音</string>
</resources>
