<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/aliyun_svideo_view_action_bar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_bit_rate"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_bitrate_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/aliyun_bitrate_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_min_record_duration"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_min_duration_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/aliyun_min_record_duration_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:paddingLeft="15dp"
                android:text="@string/aliyun_max_record_duration"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_max_duration_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/aliyun_max_record_duration_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_record_gop"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/aliyun_gop_edit"
                style="@style/alivc_record_line_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/aliyun_record_gop_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_svideo_record_quality"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_quality_super"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_svideo_record_quality_super" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_video_quality_high"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/aliyun_record_video_quality_high" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_video_quality_normal"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_svideo_record_quality_meidan" />

            </LinearLayout>

            <Button
                android:id="@+id/alivc_video_quality_low"
                style="@style/alivc_record_btn_style"
                android:layout_marginTop="15dp"
                android:text="@string/aliyun_svideo_record_quality_low" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_record_ratio"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_video_ratio_9_16"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_reocrd_ratio_9_16" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_video_ratio_3_4"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/aliyun_record_ratio_3_4" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_video_ratio_1_1"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_record_ratio_1_1" />

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_record_resolution"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_record_resolution_360p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_record_resolution_360p" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_record_resolution_480p"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/aliyun_record_resolution_480p" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_record_resolution_540p"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_record_resolution_540p" />

            </LinearLayout>

            <Button
                android:id="@+id/alivc_record_resolution_720p"
                style="@style/alivc_record_btn_style"
                android:layout_marginTop="10dp"
                android:text="@string/aliyun_record_resolution_720p" />
            <TextView
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:paddingLeft="15dp"
                android:text="@string/aliyun_record_video_codec"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/alivc_record_encoder_hardware"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_record_hardware_encoder" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/alivc_record_encoder_openh264"
                        style="@style/alivc_record_btn_style"
                        android:layout_gravity="center"
                        android:text="@string/aliyun_record_openh264_encoder" />
                </FrameLayout>

                <Button
                    android:id="@+id/alivc_record_encoder_ffmpeg"
                    style="@style/alivc_record_btn_style"
                    android:text="@string/aliyun_record_ffmpeg_encoder" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/aliyun_start_record"
        android:layout_width="match_parent"
        android:text="@string/aliyun_start_record"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:background="@drawable/alivc_bg_start_record"
        android:layout_height="44dp" />


</LinearLayout>
